<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screening.ScreeningFragment">

    <ImageButton
        android:id="@+id/back_btn3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="115dp"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/btn_screening1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034"
        app:srcCompat="@drawable/ic_arrow_back_green"/>

        <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:text="Pilih Tindakan Screening"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_screening1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="41dp"

        android:background="@drawable/ib_penyakit_umum"
        android:text="@string/penyakit_umum"
        android:textColor="@color/green_sehat"
        app:layout_constraintBottom_toTopOf="@+id/btn_screening2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_screening2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/ib_penyakit_tulang"
        android:text="@string/penyakit_tulang"
        android:textColor="@color/green_sehat"
        app:layout_constraintBottom_toTopOf="@+id/btn_screening3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_screening1" />

        <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_screening3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="57dp"
        android:background="@drawable/ib_penyakit_dalam"
        android:text="@string/penyakit_dalam"
        android:textColor="@color/green_sehat"
        app:layout_constraintBottom_toTopOf="@+id/btn_screening4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_screening2" />

        <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_screening4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/ib_penyakit_mata"
        android:text="@string/penyakit_mata"
        android:textColor="@color/green_sehat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_screening3" />


</androidx.constraintlayout.widget.ConstraintLayout>