<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_sehat"
    tools:context=".ui.login.LoginActivity">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@color/green_sehat"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        android:layout_marginStart="20dp"
        app:srcCompat="@drawable/ic_arrow_back_white" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/custom_edit_text"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Username/Email"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="@color/black"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_edit_text"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:padding="10dp"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        app:layout_constraintVertical_bias="0.019" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:background="@drawable/bg_button"
        android:textColor="@color/green_sehat"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginEmail_btn"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:text="@string/login_dengan_gmail"
        android:textColor="@color/green_sehat"
        android:background="@drawable/bg_button"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginTelepon_btn"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:text="@string/login_dengan_telepon"
        android:textColor="@color/green_sehat"
        android:background="@drawable/bg_button"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail_btn"
        app:layout_constraintVertical_bias="0.113" />

    <TextView
        android:id="@+id/tvBelumPunyaAkun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/belum_punya_akun"
        android:textColor="@color/white"
        android:textSize="30sp"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTelepon_btn" />

    <Button
        android:id="@+id/buatAkun"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:text="@string/buat_akun"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBelumPunyaAkun" />


</androidx.constraintlayout.widget.ConstraintLayout>